Updated: All classes.

--- a/src/main/resources/TeamSettings.yml
+++ b/src/main/resources/TeamSettings.yml
@@ -1,16 +1,14 @@
-# Name of the main command without / (Default is /team) | ONLY ONE WORD ALLOWED.
-TeamCommand: "team"
-# You may change the name of this feature to be Guild, League, or whatever you like.
-TeamName: "&5Guild"
 # Prefix of the Teams Feature. (Prefix you want to use at the beginning of each message for this current feature.)
 Prefix: "&7[&bGuild&7]"
 # Max amount of players allowed in a team. (Default is 5)
 TeamSize:
-  # Decade whether you are allowed to Upgrade the Max players per team.
+  # Decide whether you are allowed to Upgrade the Max players per team.
   # If false, only Max-Players-Per-Team is used. (Default is true)
   Upgradable: true
   # Starting size before any upgrades to the Max players.
   StartingSize: 3
+
+
   # Max amount of players allowed in a team. (Default is 5)
   Max-Players-Per-Team: 5
 
@@ -25,20 +23,24 @@ Claims:
 Banks:
   # Decide whether you want to enable Team Banks. Default is true.
   Enabled: true
-  # Set the maximum amount of money allowed in team Banks. Set to -1 for infinity. (Default is 5000)
-  MaxBankCap: 5000
+  # Set the maximum amount of money allowed in team Banks. Set to -1 for infinity. (Default is 1000000)
+  MaxBankCap: 1000000
 
 TeamChat:
   # Decide whether you want to enable Team Chat. Default is true
   Enabled: true
   # Set the team chat prefix that is showed at the beginning of each Message if you're in team chat.
-  TeamChatPrefix: "&a[Team]"
+  TeamChatPrefix: "&a[&bGuild Chat&7]"
+
+
+
+
 # Here you can edit the Default Settings of the teams Feature per the teams' role.
 #Priority: The order of superiority of one role over other, lower the number higher the priority.
 # Claim: Whether they should be allowed to Claim land for the team.
 # Remove: Whether they should be allowed to remove a Player from the team.
 # ChangePermissions: Whether they should be allowed to change team permissions.
-# Interact: Whether they should be allowed to Interact with items on their claim such as Crafting Tables, Furnaces, Buttons, Doors, Chests, etc...
+# Interact: Whether they should be allowed to Interact with items on their claim such as Crafting Tables, Furnaces, Buttons, Doors, etc...
 # Invite: Whether they should be allowed to invite new members.
 # Kick: Whether they should be allowed to kick a player from the team.
 # Promote: Whether they should be allowed to promote a Player on the team.
